@@ -32,7 +32,7 @@
      in src/tools, with needed api modules preloaded to be
      able to test for guile an interactive way.
 **** TODO first version
-     CLOCK: [2014-08-18 lun. 10:26]
+     CLOCK: [2014-08-18 lun. 10:26]--[2014-08-18 lun. 11:10] =>  0:44
      CLOCK: [2014-08-17 dim. 20:34]--[2014-08-17 dim. 20:44] =>  0:10
      CLOCK: [2014-08-17 dim. 18:51]--[2014-08-17 dim. 19:46] =>  0:55
      CLOCK: [2014-08-13 mer. 17:30]--[2014-08-13 mer. 18:17] =>  0:47
