@@ -8,8 +8,8 @@ crainbrurpg-client - ??? - The NewProjectLayout's client.
    Please update revision in configure.in
 
 * v0.0.0-2 (4 jan 2011 - ???) SLOC 41 FT 0:52
+- Correctly initialized OIS
 - Ogre window now open
 - Update GNU headers for 2013/2014
 - Now uses rainbrurpg-logger
-- Got a black screen 
-   added FrameListener and Viewport
+- Got a black screen (added FrameListener and Viewport)
