@@ -1,3 +1,10 @@
+2014-09-18  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/GameEngine.cpp (GameEngine) : correctly initialize OIS with
+	exception handling.
+	
+	* configure.ac: PKG_CHECK_MODULES needs OIS >= 1.4.
+
 2014-09-17  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/GameEnginer.cpp (setupResources): take an extra argument
